--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ black = "^20.8b1"
 flake8-bugbear = "^20.11.1"
 flake8-bandit = "^2.1.2"
 safety = "^1.9.0"
+python-language-server = "^0.36.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
