HARMONY-571: Refactor to support multiple notebooks

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 .PHONY: run
 
-image: pyproject.toml poetry.lock Dockerfile Harmony.ipynb
+image: pyproject.toml poetry.lock Dockerfile
 	docker build -t harmony/regression-tests:latest .
 
 run:
