--- a/test/Makefile
+++ b/test/Makefile
@@ -4,10 +4,10 @@ image: pyproject.toml poetry.lock Dockerfile
 	docker build -t harmony/regression-tests:latest .
 
 image2: Dockerfile.conda harmony/environment.yaml
-	docker build  --no-cache -t harmony/regression-tests2:latest -f ./Dockerfile.conda --build-arg notebook=Harmony.ipynb --build-arg sub_dir=harmony .
+	docker build  -t harmony/regression-tests2:latest -f ./Dockerfile.conda --build-arg notebook=Harmony.ipynb --build-arg sub_dir=harmony .
 
 image3: Dockerfile.conda gdal_subsetter/environment.yaml
-	docker build  --no-cache -t harmony/regression-tests3:latest -f ./Dockerfile.conda --build-arg notebook=GDAL_Subsetter_Regression.ipynb --build-arg sub_dir=gdal_subsetter .
+	docker build  -t harmony/regression-tests3:latest -f ./Dockerfile.conda --build-arg notebook=GDAL_Subsetter_Regression.ipynb --build-arg sub_dir=gdal_subsetter .
 
 
 run:
