added regression notebook from harmony repo

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,4 +4,7 @@ harmony-image: Dockerfile harmony/environment.yaml
 asf-gdal-image: Dockerfile gdal_subsetter/environment.yaml
 	docker build --no-cache -t harmony/regression-tests-asf-gdal:latest -f ./Dockerfile --build-arg notebook=GDAL_Subsetter_Regression.ipynb --build-arg sub_dir=gdal_subsetter .
 
-images: harmony-image asf-gdal-image
+harmony-regression-image: Dockerfile harmony-regression/environment.yaml
+	docker build --no-cache -t harmony/regression-tests-harmony-regression:latest -f ./Dockerfile --build-arg notebook=HarmonyRegression.ipynb --build-arg sub_dir=harmony-regression .
+
+images: harmony-image asf-gdal-image harmony-regression-image
