--- a/test/harmony-regression/environment.yaml
+++ b/test/harmony-regression/environment.yaml
@@ -11,3 +11,12 @@ dependencies:
   - papermill
   - pytest
   - ipytest
+  - CacheControl>=0.12.6
+  - Pillow>=7.1.1
+  - h5py>=2.10.0
+  - numpy>=1.18.2
+  - geopandas>=0.7.0
+  - descartes>=1.1.0
+  - contextily>=1.0.0
+  - sat-stac>=0.4.0
+  - xarray>=0.16.2
