--- a/test/harmony-regression/environment.yaml
+++ b/test/harmony-regression/environment.yaml
@@ -3,11 +3,17 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
+  - python=3.9
   - jupyter
-  - requests
-  - netcdf4
-  - matplotlib
   - papermill
-  - pytest
-  - ipytest
+  - requests >= 2.23.0
+  - CacheControl >= 0.12.6
+  - matplotlib >= 3.2.1
+  - Pillow >= 7.1.1
+  - h5py >= 2.10.0
+  - numpy >= 1.18.2
+  - geopandas >= 0.7.0
+  - descartes >= 1.1.0
+  - contextily >= 1.0.0
+  - sat-stac >= 0.4.0
+  - xarray >= 0.16.2
