--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -17,4 +17,4 @@ COPY ${sub_dir}/conda-linux-64.lock ./${sub_dir}
 
 RUN conda create --name papermill --file ./${sub_dir}/conda-linux-64.lock
 
-ENTRYPOINT export PATH=/opt/conda/envs/papermill/bin:$PATH; mkdir /root/output/${env_sub_dir}; conda activate papermilll; papermill --cwd ${env_sub_dir} ${env_sub_dir}/${env_notebook} /root/output/${env_sub_dir}/Results.ipynb -p harmony_host_url $harmony_host_url
+ENTRYPOINT export PATH=/opt/conda/envs/papermill/bin:$PATH; mkdir /root/output/${env_sub_dir}; papermill --cwd ${env_sub_dir} ${env_sub_dir}/${env_notebook} /root/output/${env_sub_dir}/Results.ipynb -p harmony_host_url $harmony_host_url
