Disable UAT asf notebook-fix

--- a/test/Makefile
+++ b/test/Makefile
@@ -10,4 +10,4 @@ harmony-regression-image: Dockerfile harmony-regression/environment.yaml
 sds-image: Dockerfile sds/environment.yaml
 	docker build -t harmony/regression-tests-sds:latest -f ./Dockerfile --build-arg notebook=SDS_Regression.ipynb --build-arg sub_dir=sds .
 
-images: harmony-image asf-gdal-image harmony-regression-image sds-image
+images: harmony-image harmony-regression-image sds-image #asf-gdal-image
