DAS-1265 - Ensure Trajectory Subsetter tests work, and ignore .sha256 files.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -17,4 +17,8 @@ COPY ${sub_dir}/conda-linux-64.lock ./${sub_dir}
 
 RUN conda create --name papermill --file ./${sub_dir}/conda-linux-64.lock
 
+# Install harmony-py within the conda environment
+# (harmony-py is available from PyPI, not conda)
+RUN conda install --name papermill -y pip; conda run --name papermill pip install harmony-py
+
 ENTRYPOINT export PATH=/opt/conda/envs/papermill/bin:$PATH; mkdir /root/output/${env_sub_dir}; papermill --cwd ${env_sub_dir} ${env_sub_dir}/${env_notebook} /root/output/${env_sub_dir}/Results.ipynb -p harmony_host_url $harmony_host_url
