--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,10 @@ harmony-regression-image: Dockerfile harmony-regression/environment.yaml
 hga-image: Dockerfile hga/environment.yaml
 	docker build -t harmony/regression-tests-hga:latest -f ./Dockerfile --build-arg notebook=HGA_Regression.ipynb --build-arg sub_dir=hga .
 
+n2z-image: Dockerfile sds/environment.yaml
+	docker build -t harmony/regression-tests-n2z:latest -f ./Dockerfile --build-arg notebook=N2Z_Regression.ipynb --build-arg sub_dir=n2z .
+
 sds-image: Dockerfile sds/environment.yaml
 	docker build -t harmony/regression-tests-sds:latest -f ./Dockerfile --build-arg notebook=SDS_Regression.ipynb --build-arg sub_dir=sds .
 
-images: harmony-image harmony-regression-image sds-image hga-image
+images: harmony-image harmony-regression-image hga-image n2z-image sds-image
