Pass credentials to the n2z container at run time.
This is a terrible hack to get around the fact I can't create a docker command
conditionally and have the correct credentials get to AWS.

DAS-1721

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -5,6 +5,10 @@ ARG notebook
 ENV env_sub_dir=$sub_dir
 ENV env_notebook=$notebook
 
+ENV AWS_SECRET_ACCESS_KEY=no-access
+ENV AWS_ACCESS_KEY_ID=no-access
+ENV AWS_REGION=us-west-2
+
 WORKDIR /root
 
 RUN conda config --add channels conda-forge
