--- a/.github/workflows/build-regression-image.yml
+++ b/.github/workflows/build-regression-image.yml
@@ -12,9 +12,11 @@ on:
         type: string
 
 jobs:
-  runs-on: ubuntu-latest
 
   build:
+    runs-on: ubuntu-latest
+
+  steps:
     - name: Checkout regression test repository
       uses: actions/checkout@v3
 
