--- a/.github/workflows/build-regression-image.yml
+++ b/.github/workflows/build-regression-image.yml
@@ -19,5 +19,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Image
+        working-directory: ./test
         run: |
           make ${{inputs.image-short-name}}-image
