--- a/test/sds/environment.yaml
+++ b/test/sds/environment.yaml
@@ -9,9 +9,10 @@ dependencies:
   - requests
   - matplotlib
   - numpy
+  - h5py == 3.7.0
   - netCDF4
-  - h5py
   - cartopy
-  - xarray
+  - pandas == 1.3.0
+  - xarray == 2022.9.0
   - pip:
     - harmony-py
