--- a/test/Makefile
+++ b/test/Makefile
@@ -7,11 +7,11 @@ harmony-regression-image: Dockerfile harmony-regression/environment.yaml
 hga-image: Dockerfile hga/environment.yaml
 	docker build -t harmony/regression-tests-hga:latest -f ./Dockerfile --build-arg notebook=HGA_Regression.ipynb --build-arg sub_dir=hga .
 
+hoss-image: Dockerfile hoss/environment.yaml
+	docker build -t harmony/regression-tests-hoss:latest -f ./Dockerfile --build-arg notebook=HOSS_Regression.ipynb --build-arg sub_dir=hoss .
+
 n2z-image: Dockerfile n2z/environment.yaml
 	docker build -t harmony/regression-tests-n2z:latest -f ./Dockerfile --build-arg notebook=N2Z_Regression.ipynb --build-arg sub_dir=n2z .
-
-sds-image: Dockerfile sds/environment.yaml
-	docker build -t harmony/regression-tests-sds:latest -f ./Dockerfile --build-arg notebook=SDS_Regression.ipynb --build-arg sub_dir=sds .
 
 swath-projector-image: Dockerfile swath-projector/environment.yaml
 	docker build -t harmony/regression-tests-swath-projector:latest -f ./Dockerfile --build-arg notebook=SwathProjector_Regression.ipynb --build-arg sub_dir=swath-projector .
@@ -22,4 +22,4 @@ trajectory-subsetter-image: Dockerfile trajectory-subsetter/environment.yaml
 variable-subsetter-image: Dockerfile variable-subsetter/environment.yaml
 	docker build -t harmony/regression-tests-variable-subsetter:latest -f ./Dockerfile --build-arg notebook=VariableSubsetter_Regression.ipynb --build-arg sub_dir=variable-subsetter .
 
-images: harmony-image harmony-regression-image hga-image n2z-image sds-image swath-projector trajectory-subsetter-image variable-subsetter-image
+images: harmony-image harmony-regression-image hga-image hoss-image n2z-image swath-projector trajectory-subsetter-image variable-subsetter-image
