DAS-1745 Pt.1 Update all test environments to python 3.9 (#45)

--- a/test/sds/environment.yaml
+++ b/test/sds/environment.yaml
@@ -6,10 +6,13 @@ dependencies:
   - python=3.9
   - jupyter
   - papermill
-  - requests >= 2.23.0
-  - matplotlib >= 3.2.1
-  - numpy >= 1.18.2
-  - netCDF4 >= 1.5.7
-  - h5py >= 3.3.0
-  - cartopy >= 0.20.2
-  - xarray >= 2022.6.0
+  - requests
+  - matplotlib
+  - numpy
+  - h5py == 3.7.0
+  - netCDF4
+  - cartopy
+  - pandas == 1.3.0
+  - xarray == 2022.9.0
+  - pip:
+    - harmony-py
