--- a/test/hga/environment.yaml
+++ b/test/hga/environment.yaml
@@ -3,10 +3,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
+  - python=3.9
   - jupyter
   - papermill
   - pyproj
   - numpy
   - gdal=3.4.2
   - netCDF4
+  - pip:
+    - harmony-py
