Revert "Updates dependencies for harmony-regression regression tests"

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -13,8 +13,7 @@ WORKDIR /root
 
 RUN conda install --channel=conda-forge --name=base conda-lock -q -y
 
-#COPY .netrc .netrc
-COPY build-netrc.sh notebook-entrypoint.sh .
+COPY .netrc .netrc
 RUN mkdir ./${sub_dir}
 COPY ${sub_dir}/conda-lock.yml ./${sub_dir}
 RUN conda-lock install -n papermill ./${sub_dir}/conda-lock.yml
