--- a/.github/workflows/build-target-image.yml
+++ b/.github/workflows/build-target-image.yml
@@ -11,7 +11,7 @@ on:
         required: true
         type: string
       notebook-name:
-        require: true
+        required: true
         type: string
 
 env:
