--- a/.github/workflows/build-target-image.yml
+++ b/.github/workflows/build-target-image.yml
@@ -58,8 +58,9 @@ jobs:
       - name: Build and Push Docker image
         uses: docker/build-push-action@v3
         if: steps.changes.outputs.src == 'true'
+        working-directory: ./test
         with:
-          context: ./test
+          context: .
           build-args: |
               notebook=${{inputs.notebook-name}}
               subdir=${{inputs.image-short-name}}
