Buildkit workaround for bug.
DAS-1745

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -10,10 +10,11 @@ ENV AWS_ACCESS_KEY_ID=no-access
 ENV AWS_REGION=us-west-2
 
 WORKDIR /root
-
 RUN conda install --channel=conda-forge --name=base conda-lock -q -y
 
 COPY build-netrc.sh notebook-entrypoint.sh ./
+RUN echo ${sub_dir}
+RUN echo ${env_sub_dir}
 RUN mkdir ./${sub_dir}
 COPY ${sub_dir}/conda-lock.yml ./${sub_dir}
 RUN conda-lock install -n papermill ./${sub_dir}/conda-lock.yml
