--- a/.github/workflows/build-target-image.yml
+++ b/.github/workflows/build-target-image.yml
@@ -72,6 +72,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          # https://github.com/docker/build-push-action/issues/761#issuecomment-1383822381
+          driver-opts: |
+            image=moby/buildkit:v0.10.6
+
 
       - name: Do nothing for this image
         if: steps.changes.outputs.src == 'false'
