--- a/.github/workflows/build-target-image.yml
+++ b/.github/workflows/build-target-image.yml
@@ -58,8 +58,9 @@ jobs:
             type=semver,pattern={{version}},value=${{ env.semantic_version }}
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
           # https://github.com/docker/build-push-action/issues/761#issuecomment-1383822381
+        with:
           driver-opts: |
             image=moby/buildkit:v0.10.6
 
