--- a/.github/workflows/build-target-image.yml
+++ b/.github/workflows/build-target-image.yml
@@ -54,9 +54,10 @@ jobs:
           tags: |
             type=semver,pattern={{version}},value=${{ env.semantic_version }}
 
+      # https://github.com/docker/build-push-action/issues/761#issuecomment-1383822381
       - name: Set up Docker Buildx
+        if: steps.changes.outputs.src == 'true'
         uses: docker/setup-buildx-action@v2
-        # https://github.com/docker/build-push-action/issues/761#issuecomment-1383822381
         with:
           driver-opts: |
             image=moby/buildkit:v0.10.6
