Basic slimming strategy.
This is the bare minimum you can do to make conda images smaller.

DAS-1746

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -9,14 +9,16 @@ ENV AWS_SECRET_ACCESS_KEY=no-access
 ENV AWS_ACCESS_KEY_ID=no-access
 ENV AWS_REGION=us-west-2
 
+ENV PYTHONDONTWRITEBYTECODE=true
+
 WORKDIR /root
-RUN conda install --channel=conda-forge --name=base conda-lock -q -y
+RUN conda install --channel=conda-forge --name=base conda-lock -q -y && conda clean -afy
 
 COPY build-netrc.sh notebook-entrypoint.sh ./
 
 RUN mkdir ./${sub_dir}
 COPY ${sub_dir}/conda-lock.yml ./${sub_dir}
-RUN conda-lock install -n papermill ./${sub_dir}/conda-lock.yml
+RUN conda-lock install -n papermill ./${sub_dir}/conda-lock.yml  && conda clean -afy
 COPY ${sub_dir} ./${sub_dir}
 
 ENTRYPOINT /bin/bash ./notebook-entrypoint.sh
