Relocate the working dir from /root to /app
This is just to remove it from the root user's home directory.

Also uses expanded flags for conda commands.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -11,14 +11,17 @@ ENV AWS_REGION=us-west-2
 
 ENV PYTHONDONTWRITEBYTECODE=true
 
-WORKDIR /root
-RUN conda install --channel=conda-forge --name=base conda-lock -q -y && conda clean -afy
+WORKDIR /app
+RUN conda install --channel=conda-forge --name=base conda-lock --quiet --yes \
+    && conda clean --all --force-pkgs-dirs --yes
 
 COPY build-netrc.sh notebook-entrypoint.sh ./
 
 RUN mkdir ./${sub_dir}
 COPY ${sub_dir}/conda-lock.yml ./${sub_dir}
-RUN conda-lock install -n papermill ./${sub_dir}/conda-lock.yml  && conda clean -afy
+RUN conda-lock install --name papermill ./${sub_dir}/conda-lock.yml \
+    && conda clean --all --force-pkgs-dirs --yes
+
 COPY ${sub_dir} ./${sub_dir}
 
 ENTRYPOINT /bin/bash ./notebook-entrypoint.sh
