--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,4 +1,4 @@
-FROM continuumio/miniconda3:latest
+FROM mambaorg/micromamba:1.2
 
 ARG sub_dir
 ARG notebook
@@ -12,15 +12,19 @@ ENV AWS_REGION=us-west-2
 ENV PYTHONDONTWRITEBYTECODE=true
 
 WORKDIR /app
-RUN conda install --channel=conda-forge --name=base conda-lock --quiet --yes \
-    && conda clean --all --force-pkgs-dirs --yes
+# RUN conda install --channel=conda-forge --name=base conda-lock --quiet --yes \
+#     && conda clean --all --force-pkgs-dirs --yes
 
 COPY build-netrc.sh notebook-entrypoint.sh ./
 
 RUN mkdir ./${sub_dir}
-COPY ${sub_dir}/conda-lock.yml ./${sub_dir}
-RUN conda-lock install --name papermill ./${sub_dir}/conda-lock.yml \
-    && conda clean --all --force-pkgs-dirs --yes
+COPY ${sub_dir}/environment.yaml ./${sub_dir}
+
+RUN micromamba create -y -f ${sub_dir}/environment.yaml \
+    && micromamba clean --all --force-pkgs-dirs --yes
+
+# RUN conda-lock install --name papermill ./${sub_dir}/conda-lock.yml \
+#     && conda clean --all --force-pkgs-dirs --yes
 
 COPY ${sub_dir} ./${sub_dir}
 
