--- a/test/harmony-regression/environment.yaml
+++ b/test/harmony-regression/environment.yaml
@@ -5,8 +5,10 @@ channels:
 dependencies:
   - python=3.9
   - jupyter
+  - python-dateutil == 2.8.2
+  - python-dateutil ~= 2.7
   - sat-stac == 0.4.1
-  - intake-stac == 0.3.0
+  - intake-stac == 0.3.0 # increasing causes problems with additional install of pystac which has problems with urllib/requests.py
   - papermill
   - requests
   - Pillow
