--- a/test/harmony-regression/environment.yaml
+++ b/test/harmony-regression/environment.yaml
@@ -4,19 +4,19 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - jupyter == 1.0.0
-  - papermill == 2.3.4
-  - requests == 2.28.1
-  - CacheControl == 0.12.11
-  - matplotlib == 3.6.2
-  - Pillow == 9.4.0
-  - h5py == 3.7.0
-  - numpy == 1.24.1
-  - geopandas == 0.12.2
-  - descartes == 1.1.0
-  - contextily == 1.2.0
+  - jupyter
+  - python-dateutil == 2.8.2
+  - python-dateutil ~= 2.7
   - sat-stac == 0.4.1
-  - xarray == 2022.12.0
-  - intake-stac == 0.3.0
+  - intake-stac == 0.3.0 # increasing causes problems with additional install of pystac which has problems with urllib/requests.py
+  - papermill
+  - requests
+  - Pillow
+  - CacheControl
+  - matplotlib
+  - h5py
+  - numpy
+  - geopandas
+  - contextily
   - pip:
     - harmony-py
