--- a/test/n2z/environment.yaml
+++ b/test/n2z/environment.yaml
@@ -4,14 +4,14 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - boto3
-  - jupyter
-  - papermill
+  - boto3=1.26.133
+  - notebook=6.5.4
+  - papermill=2.3.4
   - xarray == 2022.9.0
-  - numpy
+  - numpy=1.24.3
   - pandas == 1.3.0
-  - packaging
-  - zarr
-  - cftime
+  - packaging=23.1
+  - zarr=2.14.2
+  - cftime=1.6.2
   - pip:
     - harmony-py
