Genesis of hybig regression tests.
Adds skeleton of what's needed to start

DAS-1606

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -24,6 +24,9 @@ jobs:
             image: "hoss"
             notebook: "HOSS_Regression.ipynb"
           -
+            image: "hybig"
+            notebook: "HyBIG_Regression.ipynb"
+          -
             image: "n2z"
             notebook: "N2Z_Regression.ipynb"
           -
