--- a/test/hybig/environment.yaml
+++ b/test/hybig/environment.yaml
@@ -6,9 +6,8 @@ dependencies:
   - python=3.10
   - notebook=6.5.4
   - papermill=2.3.4
-  - xarray == 2022.12.0
+  - rasterio=1.3.7
   - numpy=1.24.3
-  - netCDF4=1.6.3
-  - pandas == 1.3.0
+  - pip=23.1.2
   - pip:
-    - harmony-py
+    - harmony-py=0.4.7
