--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -42,6 +42,9 @@ jobs:
             image: "variable-subsetter"
             notebook: "VariableSubsetter_Regression.ipynb"
 
+          - image: "geoloco"
+            notebook: "Geoloco_Regression.ipynb"
+
     uses: ./.github/workflows/build-target-image.yml
     with:
       image-short-name: ${{ matrix.targets.image }}
