DAS-1926: Adds environment variable option for AWS_ACCESS_TOKEN
This allows a user with only short term credentials to run the regression tests.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -10,6 +10,7 @@ ENV env_notebook=$notebook
 
 ENV AWS_SECRET_ACCESS_KEY=no-access
 ENV AWS_ACCESS_KEY_ID=no-access
+ENV AWS_ACCESS_TOKEN=no-access
 ENV AWS_REGION=us-west-2
 
 ENV PYTHONDONTWRITEBYTECODE=true
