--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,6 +1,4 @@
-# Uses focal image because newer jammy image does not work with old docker versions
-# see related information: https://github.com/adoptium/containers/issues/215#issuecomment-1142046045
-FROM mambaorg/micromamba:1.4.2-focal
+FROM mambaorg/micromamba:1.5.8-jammy
 USER root
 
 ARG sub_dir
