DAS-2214: Skeleton changes to begin nsidc-icesat2 tests

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -30,6 +30,9 @@ jobs:
             image: "n2z"
             notebook: "N2Z_Regression.ipynb"
           -
+            image: "nsidc-icesat2"
+            notebook: "NSIDC-ICESAT2_Regression.ipynb"
+          -
             image: "regridder"
             notebook: "Regridder_Regression.ipynb"
           -
