DAS-2214: Updates Dockerfile to optionally include shared_utils dir
When passed a build arg shared_utils, include this directory in the regression
test image.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -3,8 +3,10 @@ USER root
 
 ARG sub_dir
 ARG notebook
+ARG shared_utils=false
 ENV env_sub_dir=$sub_dir
 ENV env_notebook=$notebook
+
 
 ENV AWS_SECRET_ACCESS_KEY=no-access
 ENV AWS_ACCESS_KEY_ID=no-access
@@ -22,6 +24,14 @@ COPY ${sub_dir}/environment.yaml ./${sub_dir}
 
 RUN micromamba create -y -f ${sub_dir}/environment.yaml \
     && micromamba clean --all --force-pkgs-dirs --yes
+
+# Include shared utility functions if requested.  This is a bit awkward, it
+# always copies the shared utils directory to the image, but then deletes it if
+# you didn't want it.
+COPY shared_utils ./shared_utils
+RUN if [ "$shared_utils" = "false" ]; then \
+        rm -rf ./shared_utils; \
+    fi
 
 COPY ${sub_dir} ./${sub_dir}
 
