--- a/test/nsidc-icesat2/environment.yaml
+++ b/test/nsidc-icesat2/environment.yaml
@@ -1,10 +1,13 @@
 name: papermill-nsidc-icesat2
 channels:
   - conda-forge
-  - defaults
 dependencies:
   - python=3.11.5
+  - netCDF4
   - notebook=7.2.1
+  - numpy
+  - papermill
   - xarray=2024.7.0
+  - pip
   - pip:
     - harmony-py==0.4.15
