--- a/test/nsidc-icesat2/environment.yaml
+++ b/test/nsidc-icesat2/environment.yaml
@@ -7,7 +7,7 @@ dependencies:
   - notebook=7.2.1
   - numpy
   - papermill
-  - xarray=2024.7.0
   - pip
   - pip:
     - harmony-py==0.4.15
+    - git+https://github.com/pydata/xarray.git@ca2e9d6#egg=xarray
