Added subset-band-name regression tests Added reference output file

--- a/test/Makefile
+++ b/test/Makefile
@@ -31,4 +31,7 @@ variable-subsetter-image: Dockerfile variable-subsetter/environment.yaml
 geoloco-image: Dockerfile geoloco/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-geoloco:latest -f ./Dockerfile --build-arg notebook=Geoloco_Regression.ipynb --build-arg sub_dir=geoloco .
 
+subset-band-name-image: Dockerfile subset-band-name/environment.yaml
+	docker build -t ghcr.io/nasa/regression-tests-subset-band-name:latest -f ./Dockerfile --build-arg notebook=SubsetBandName_Regression.ipynb --build-arg sub_dir=subset-band-name .
+
 images: harmony-image harmony-regression-image hga-image hoss-image hybig-image n2z-image regridder-image swath-projector-image trajectory-subsetter-image variable-subsetter-image geoloco-image
