--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -45,6 +45,9 @@ jobs:
           - image: "geoloco"
             notebook: "Geoloco_Regression.ipynb"
 
+          - image: "net2cog"
+            notebook: "net2cog_Regression.ipynb"
+
     uses: ./.github/workflows/build-target-image.yml
     with:
       image-short-name: ${{ matrix.targets.image }}
