--- a/test/net2cog/environment.yaml
+++ b/test/net2cog/environment.yaml
@@ -1,7 +1,7 @@
 name: papermill-net2cog
 channels:
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python=3.10
   - notebook=6.5.4
