DAS-2214: Attempts to enable LFS for NSIDC's regression tests

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -32,6 +32,7 @@ jobs:
           -
             image: "nsidc-icesat2"
             notebook: "NSIDC-ICESAT2_Regression.ipynb"
+            lfs: "true"
           -
             image: "regridder"
             notebook: "Regridder_Regression.ipynb"
@@ -55,3 +56,4 @@ jobs:
     with:
       image-short-name: ${{ matrix.targets.image }}
       notebook-name: ${{ matrix.targets.notebook }}
+      lfs: ${{matrix.targets.lfs}}
