--- a/.github/workflows/build-target-image.yml
+++ b/.github/workflows/build-target-image.yml
@@ -62,13 +62,12 @@ jobs:
           tags: |
             type=semver,pattern={{version}},value=${{ env.semantic_version }}
 
-      # https://github.com/docker/build-push-action/issues/761#issuecomment-1383822381
       - name: Set up Docker Buildx
         if: steps.changes.outputs.src == 'true'
         uses: docker/setup-buildx-action@v2
         with:
           driver-opts: |
-            image=moby/buildkit:v0.10.6
+            image=moby/buildkit:latest
 
       - name: Build and Push Docker image
         uses: docker/build-push-action@v3
