--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+test/nsidc-icesat2/reference_files/*.h5 filter=lfs diff=lfs merge=lfs -text
 test/net2cog/** !text !filter !merge !diff
 test/hybig/** !text !filter !merge !diff
 test/opera-rtc-s1-browse/** !text !filter !merge !diff
