--- a/.github/workflows/build-target-image.yml
+++ b/.github/workflows/build-target-image.yml
@@ -13,6 +13,12 @@ on:
       notebook-name:
         required: true
         type: string
+      shared-utils:
+        required: true
+        type: string
+      lfs:
+        required: true
+        type: string
 
 env:
   REGISTRY: ghcr.io
@@ -22,10 +28,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout regression test repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          lfs: ${{inputs.lfs}}
 
       - name: Did this image's version change?
-        uses: dorny/paths-filter@v2
+        uses: dorny/paths-filter@v3
         id: changes
         with:
           filters: |
@@ -54,13 +62,12 @@ jobs:
           tags: |
             type=semver,pattern={{version}},value=${{ env.semantic_version }}
 
-      # https://github.com/docker/build-push-action/issues/761#issuecomment-1383822381
       - name: Set up Docker Buildx
         if: steps.changes.outputs.src == 'true'
         uses: docker/setup-buildx-action@v2
         with:
           driver-opts: |
-            image=moby/buildkit:v0.10.6
+            image=moby/buildkit:latest
 
       - name: Build and Push Docker image
         uses: docker/build-push-action@v3
@@ -69,6 +76,8 @@ jobs:
           build-args: |
               notebook=${{inputs.notebook-name}}
               sub_dir=${{inputs.image-short-name}}
+              shared_utils=${{inputs.shared-utils}}
+
           file: ./test/Dockerfile
           context: ./test
           push: true
