HARMONY-1874: Make harmony-service-example event trigger variable-subsetter tests.

--- a/.github/workflows/variable-subsetter-test-suite.yml
+++ b/.github/workflows/variable-subsetter-test-suite.yml
@@ -29,7 +29,7 @@ on:
         type: string
 
   repository_dispatch:
-    types: [variable-subsetter]
+    types: [harmony-service-example]
     inputs:
       docker-image-tag:
         required: false
